--- a/Source/LJH.Attendance.UI/FrmMain.resx
+++ b/Source/LJH.Attendance.UI/FrmMain.resx
@@ -140,67 +140,74 @@
     <value>系统</value>
   </data>
   <data name="mnu_Departments.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Departments.Text" xml:space="preserve">
     <value>多级部门管理</value>
   </data>
   <data name="mnu_Staff.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Staff.Text" xml:space="preserve">
     <value>人员管理</value>
   </data>
   <data name="toolStripSeparator6.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="mnu_OTType.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_OTType.Text" xml:space="preserve">
     <value>加班类别管理</value>
   </data>
   <data name="mnu_VacationType.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_VacationType.Text" xml:space="preserve">
     <value>请假类别管理</value>
   </data>
   <data name="mnu_TripType.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_TripType.Text" xml:space="preserve">
     <value>外出类别管理</value>
   </data>
   <data name="mnu_TASheet.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_TASheet.Text" xml:space="preserve">
     <value>申请单登记</value>
   </data>
   <data name="toolStripSeparator5.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 6</value>
+    <value>149, 6</value>
   </data>
   <data name="mnu_Holiday.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Holiday.Text" xml:space="preserve">
     <value>节假日管理</value>
   </data>
   <data name="mnu_AttendanceDoorSelection.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_AttendanceDoorSelection.Text" xml:space="preserve">
     <value>考勤点选择</value>
   </data>
   <data name="toolStripSeparator8.Size" type="System.Drawing.Size, System.Drawing">
-    <value>145, 6</value>
+    <value>149, 6</value>
+  </data>
+  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="toolStripSeparator8.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="mnu_Options.Size" type="System.Drawing.Size, System.Drawing">
-    <value>148, 22</value>
+    <value>152, 22</value>
   </data>
   <data name="mnu_Options.Text" xml:space="preserve">
     <value>选项</value>
+  </data>
+  <data name="mnu_Options.Visible" type="System.Boolean, mscorlib">
+    <value>False</value>
   </data>
   <data name="mnu_基本资料.Size" type="System.Drawing.Size, System.Drawing">
     <value>68, 21</value>
@@ -319,7 +326,6 @@
   <data name="用户手册ToolStripMenuItem.Text" xml:space="preserve">
     <value>用户手册</value>
   </data>
-  <assembly alias="mscorlib" name="mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
   <data name="用户手册ToolStripMenuItem.Visible" type="System.Boolean, mscorlib">
     <value>False</value>
   </data>
@@ -541,7 +547,7 @@
     <value>toolStrip1</value>
   </data>
   <data name="&gt;&gt;toolStrip1.Type" xml:space="preserve">
-    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.923, Culture=neutral, PublicKeyToken=null</value>
+    <value>LJH.GeneralLibrary.WinformControl.MyToolStrip, LJH.GeneralLibrary, Version=2.0.2013.1011, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;toolStrip1.Parent" xml:space="preserve">
     <value>$this</value>
@@ -598,7 +604,7 @@
     <value>ucFormViewMain</value>
   </data>
   <data name="&gt;&gt;ucFormViewMain.Type" xml:space="preserve">
-    <value>LJH.GeneralLibrary.WinformControl.UCFormView, LJH.GeneralLibrary, Version=2.0.2013.923, Culture=neutral, PublicKeyToken=null</value>
+    <value>LJH.GeneralLibrary.WinformControl.UCFormView, LJH.GeneralLibrary, Version=2.0.2013.1011, Culture=neutral, PublicKeyToken=null</value>
   </data>
   <data name="&gt;&gt;ucFormViewMain.Parent" xml:space="preserve">
     <value>$this</value>
